--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,17 @@
 streamlit==1.2.0
 streamlit-webrtc==0.31.3
 aiortc==1.2.1
-av
+av==8.1.0
 
 #for Deep learning model
-tensorflow
+tensorflow==2.5.0
 
 #for handling image
-opencv-python-headless
-opencv-contrib-python-headless
-mediapipe
-cvzone
+opencv-python-headless==4.5.5.62
+opencv-contrib-python-headless==4.5.5.62
+mediapipe==0.8.9.1
+cvzone==1.5.6
 
 #other
-matplotlib
-numpy
+matplotlib==3.5.1
+numpy==1.19.5
